Modify access rules

--- a/project.config
+++ b/project.config
@@ -15,6 +15,7 @@
 	create = group user/Paresh Sao (paresh-sao)
 	push = +force group user/Paresh Sao (paresh-sao)
 	pushMerge = group user/Paresh Sao (paresh-sao)
+	label-Verified = -1..+1 group Administrators
 [access "refs/tags/*"]
 	push = group user/Paresh Sao (paresh-sao)
 	push = +force group user/Paresh Sao (paresh-sao)
